# smplImg

./: CMakeLists.txt  README.md
src/: image.cpp  image.h  main.cpp
